--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyecto con Tailwind</title>
+  <link rel="stylesheet" href="./css/styles.css"> 
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-center">
@@ -40,5 +41,21 @@
     </p>
     </div>
     
+
+    <div class="grid">   <!-- grid de los apis-->
+      <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">Click aquí</button>
+
+      <div> 
+        Elemento 2
+      </div>
+      <div> 
+        Elemento 3
+      </div>
+    </div>
+    <script> 
+
+    </script>
   </body>
+
 </html>
+
