--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     
 
     <div class="grid">   <!-- grid de los apis-->
-      <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">Click aquí</button>
-
+      <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiDog">Click aquí</button>
       <div> 
         Elemento 2
       </div>
@@ -52,9 +51,10 @@
         Elemento 3
       </div>
     </div>
-    <script> 
 
-    </script>
+    <div id="dataContainer"></div>
+
+    <script src="./js/apiDog.js"></script>
   </body>
 
 </html>
