--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proyecto con Tailwind</title>
+  <title>InfoMóvil</title>
   <link rel="stylesheet" href="./css/styles.css"> 
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -45,10 +45,13 @@
     <div class="grid">   <!-- grid de los apis-->
       <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiDog">Información sobre perritos</button>
       <div> 
-        Elemento 2
+        <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiCat">Información sobre gatitos</button>
       </div>
       <div> 
-        Elemento 3
+        <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiJoke">Un chiste para alegrarte el día</button>
+      </div>
+      <div>
+        <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiKanye">Frases de Kanye West</button>
       </div>
     </div>
 
