grid and api cat

--- a/pages/dog_api.html
+++ b/pages/dog_api.html
@@ -3,12 +3,14 @@
     <head>
         <title> Información de perritos </title>
         <meta charset="UTF-8">
+        <link href="../css/apis.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body> 
+        <h2>Información de razas de perritos</h2>
         <div id="dataContainer"></div>
-        <script src = "./js/apiDog.js" ></script>
+        <script src = "../js/apiDog.js" ></script>
 
     </body>
 </html>
