--- a/pages/cat_api.html
+++ b/pages/cat_api.html
@@ -3,12 +3,14 @@
     <head>
         <title> Información de perritos </title>
         <meta charset="UTF-8">
+        <link href="../css/apis.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body> 
+        <h2>¿Sabías esto de los gatitos?</h2>
         <div id="dataContainer"></div>
-        <script src = "./js/apiCat.js" ></script>
+        <script src = "../js/apiCat.js" ></script>
 
     </body>
 </html>
