--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     </p>
     </div>
     
-
     <div class="grid">   <!-- grid de los apis-->
-      <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiDog">Información sobre perritos</button>
+      <div>
+        <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiDog">Información sobre perritos</button>
+      </div>
       <div> 
         <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiCat">Información sobre gatitos</button>
       </div>
@@ -54,7 +55,6 @@
         <button class="mt-2 px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" id="fetchApiKanye">Frases de Kanye West</button>
       </div>
     </div>
-
     <script src="./js/indexScript.js"></script>
   </body>
 
