--- a/pages/cat_api.html
+++ b/pages/cat_api.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang = "es"> 
     <head>
-        <title> Información de perritos </title>
+        <title> Información de gatitos </title>
         <meta charset="UTF-8">
         <link href="../css/apis.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body> 
-        <h2>¿Sabías esto de los gatitos?</h2>
+        <h2 class="px-4 mb-3">¿Sabías esto de los gatitos?</h2>
+        <div class="flex flex-wrap gap-4 mb-4 px-4">
+        <select id="sort" class="p-2 border rounded">
+            <option value="all">Mostrar todo</option>
+            <option value="10">Mostrar 10</option>
+            <option value="100">Mostrar 100</option>
+        </select>
+        <button id='randomBtn' class="p-2 bg-gray-100 text-gray-800 rounded border border-gray-300 hover:bg-gray-200 transition-colors duration-200">Quiero un dato aleatorio</button>
+        </div>
         <div id="dataContainer"></div>
         <script src = "../js/apiCat.js" ></script>
-
     </body>
 </html>
