--- a/pages/kanye_api.html
+++ b/pages/kanye_api.html
@@ -5,14 +5,13 @@
         <meta charset="UTF-8">
         <link href="../css/apis.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
-	<button id='refreshBtn'> Nueva Frase </button>
     </head>
 
-    <body> 
-        <h2>Chiste</h2>
+    <body>
+        <button id='refreshBtn' class="px-4 py-2 bg-gray-100 text-gray-800 rounded border border-gray-300 hover:bg-gray-200 transition-colors duration-200 m-3"> Presiona aquí para una nueva frase! </button>
+        <h2 class="px-4">Frase de Kanye:</h2>
         <div id="dataContainer"></div>
         <script src = "../js/apiKanye.js" ></script>
-
     </body>
 </html>
 
