--- a/pages/dog_api.html
+++ b/pages/dog_api.html
@@ -6,14 +6,14 @@
     <title>Información de perritos</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-animales text-gray-800">
 
     <header class="bg-blue-500 text-white py-6 shadow-md">
         <h1 class="text-2xl font-bold text-center">Razas de Perritos 🐶</h1>
     </header>
 
     <main class="max-w-6xl mx-auto p-4">
-		<div class="mb-6 text-center">
+        <div class="mb-6 text-center">
             <input 
                 type="text" 
                 id="searchInput" 
@@ -31,4 +31,5 @@
 
     <script src="../js/apiDog.js"></script>
 </body>
+
 </html>
