Added random fact button functionality

--- a/pages/cat_api.html
+++ b/pages/cat_api.html
@@ -30,9 +30,10 @@
       Siguiente ➡️
     </button>
   </div>
-
+  <div>
+    <button id='randomBtn' class="w-full sm:w-auto px-4 py-3 mb-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition">Quiero un dato aleatorio</button>
+  </div>
   <div id="dataContainer" class="w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 px-2 sm:px-4"></div>
-
   <script src="../js/apiCat.js"></script>
 </body>
 </html>
